<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedAppNEW</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_Bleeding">דימום</string>
    <string name="_Choking">חנק</string>
    <string name="_Stroke">שבץ</string>
    <string name="_BrokenBone">שבר עצם</string>
    <string name="_Unconssious">חוסר הכרה</string>
    <string name="_Burn">כוויה</string>
    <string name="_AllergicReaction">תגובה אלרגית</string>
    <string name="MedApp">M e d  A p p</string>
    <string name="title_activity_choke">ChokeActivity</string>
    <string name="chokevideoimage">chokeVideoImage</string>
    <string name="ambulance_icon">ambulance_icon</string>
    <string name="_AsthmaAttack">התקף אסטמה</string>
    <string name="_DiabeticEmergency">מצב חירום סכרתי</string>
    <string name="_Distress">התקף חרדה</string>
    <string name="_HeadInjury">פגיעת ראש</string>
    <string name="_HeartAttack">התקף לב</string>
    <string name="_Hypothermia">היפותרמיה</string>
    <string name="UnconsciousNotBreathing">חוסר הכרה-ללא נשימה</string>
    <string name="UnconsciousBreathing">חוסר הכרה-בנשימה</string>
    <string name="Stroke">שבץ</string>
    <string name="Stress">התקף חרדה</string>
    <string name="Epilepsy">התקף אפילפסיה</string>
    <string name="Poisoning">הרעלה</string>
    <string name="Meningitis">דלקת קרום המוח</string>
    <string name="Strains">מתיחות ונקעים</string>
    <string name="chokeInstruction1">הכי חזק בין השכמות על מנת לגרום לפליטת העצם התקוע</string>
    <string name="CallAmbulance">הזעיקי אמבולנס</string>
    <string name="title_activity_call_ambulance">CallAmbulanceActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="YouCalledAmbulance">הזעקת אמבולנס</string>
    <string name="GoBack">חזור</string>
    <string name="title_activity_allergic_reaction">AllergicReactionActivity</string>
    <string name="allergicReactionInstruction1">\u200Fהנפגע עלול לחוש ,עקצוץ או נפיחות בחלקי גוף שונים</string>
    <string name="allergicReaction">תגובה אלרגית</string>
    <string name="title_activity_allergic_reaction_video">AllergicReactionVideoActivity</string>
    <string name="title_activity_asthma">AsthmaActivity</string>
    <string name="title_activity_asthma_video">AsthmaVideoActivity</string>
    <string name="title_activity_bleeding">BleedingActivity</string>
    <string name="title_activity_bleeding_video">BleedingVideoActivity</string>
    <string name="title_activity_broken_bone">BrokenBoneActivity</string>
    <string name="title_activity_broken_bone_video">BrokenBoneVideoActivity</string>
    <string name="title_activity_burn">BurnActivity</string>
    <string name="title_activity_burn_video">BurnVideoActivity</string>
    <string name="title_activity_diabetic">DiabeticActivity</string>
    <string name="title_activity_distress">DistressActivity</string>
    <string name="title_activity_head_injury">HeadInjuryActivity</string>
    <string name="title_activity_heart_attack">HeartAttackActivity</string>
    <string name="title_activity_hypothermia">HypothermiaActivity</string>
    <string name="title_activity_meningitis">MeningitisActivity</string>
    <string name="title_activity_poisoning">PoisoningActivity</string>
    <string name="title_activity_epilepsy">EpilepsyActivity</string>
    <string name="title_activity_strains">StrainsActivity</string>
    <string name="title_activity_stroke">StrokeActivity</string>
    <string name="title_activity_unconsious_breating">UnconsiousBreatingActivity</string>
    <string name="title_activity_unconscious_not_breathing">UnconsciousNotBreathingActivity</string>
    <string name="title_activity_diabetic_video">DiabeticVideoActivity</string>
    <string name="title_activity_distress_video">DistressVideoActivity</string>
    <string name="title_activity_epilepsy_video">EpilepsyVideoActivity</string>
    <string name="title_activity_head_injury_video">HeadInjuryVideoActivity</string>
    <string name="title_activity_heart_attack_video">HeartAttackVideoActivity</string>
    <string name="title_activity_poisoning_video">PoisoningVideoActivity</string>
    <string name="title_activity_stroke_video">StrokeVideoActivity</string>
    <string name="title_activity_unconscious_breating_video">UnconsciousBreatingVideoActivity</string>
    <string name="title_activity_unconscious_not_breathing_video">UnconsciousNotBreathingVideoActivity</string>
    <string name="title_activity_home_menu2">HomeMenu2Activity</string>
    <string name="title_activity_home_menu3">HomeMenu3Activity</string>
    <string name="other">עוד...</string>

</resources>