<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeMenu" >

    <TextView
        android:id="@+id/MedAppCaptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/MedApp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#27646c"
        android:textSize="@dimen/MedAppCaptionTextSize"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp" >

            <Button
                android:id="@+id/AllergicReactionButton"
                style="@style/HomeMenuButtonStyle"
                android:layout_alignParentTop="true"
                android:onClick="startAllergicReactionActivity"
                android:text="@string/_AllergicReaction" />

            <Button
                android:id="@+id/AsthmaAttackButton"
                style="@style/HomeMenuButtonStyle"
                android:layout_below="@id/AllergicReactionButton"
                android:onClick="startAsthmaActivity"
                android:text="@string/_AsthmaAttack" />

            <Button
                android:id="@+id/BleedingButton"
                style="@style/HomeMenuButtonStyle"
                android:layout_below="@+id/AsthmaAttackButton"
                android:onClick="startBleedingActivity"
                android:text="@string/_Bleeding" />

            <Button
                android:id="@+id/BrokenBoneButton"
                style="@style/HomeMenuButtonStyle"
                android:layout_below="@+id/BleedingButton"
                android:onClick="startBrokenBoneActivity"
                android:text="@string/_BrokenBone" />

            <Button
                android:id="@+id/BurnButton"
                style="@style/HomeMenuButtonStyle"
                android:layout_below="@+id/BrokenBoneButton"
                android:onClick="startBurnActivity"
                android:text="@string/_Burn" />

            <Button
                android:id="@+id/OtherButton"
                style="@style/HomeMenuButtonStyle"
                android:layout_below="@+id/BurnButton"
                android:onClick="toHomeMenu2"
                android:text="@string/other" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>